--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -9,42 +9,42 @@
 # the `language` matrix defined below to confirm you have the correct set of
 # supported CodeQL languages.
 ##
-name: "CodeQL"
+#name: "CodeQL"
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
+#on:
+#  push:
+ #   branches: [ "main" ]
+  #pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ "main" ]
-  schedule:
-    - cron: '21 15 * * 1'
+   # branches: [ "main" ]
+ # schedule:
+  #  - cron: '21 15 * * 1'
 
-jobs:
-  analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
-    permissions:
-      actions: read
-      contents: read
-      security-events: write
+#jobs:
+ # analyze:
+  #  name: Analyze
+   # runs-on: ubuntu-latest
+    #permissions:
+     # actions: read
+      #contents: read
+      #security-events: write
 
-    strategy:
-      fail-fast: false
-      matrix:
-        language: ['java']
+    #strategy:
+     # fail-fast: false
+     # matrix:
+      #  language: ['java']
          #CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby', rust ]
          #Learn more about CodeQL language support at https://aka.ms/codeql-docs/language-support
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+   # steps:
+    #- name: Checkout repository
+     # uses: actions/checkout@v3
 
     # Initializes the CodeQL tools for scanning.
-    - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
-      with:
-        languages: ${{ matrix.language }}
+    - #name: Initialize CodeQL
+      # uses: github/codeql-action/init@v2
+     # with:
+      #  languages: ${{ matrix.language }}
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
@@ -68,7 +68,7 @@ jobs:
     #   echo "Run, Build Application using script"
     #   ./location_of_script_within_repo/buildscript.sh
 
-    - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
-      with:
-        category: "/language:${{matrix.language}}"
+    #name: Perform CodeQL Analysis
+     #uses: github/codeql-action/analyze@v2
+      #with:
+       # category: "/language:${{matrix.language}}"
