--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -9,42 +9,42 @@
 # the `language` matrix defined below to confirm you have the correct set of
 # supported CodeQL languages.
 ##
-#name: "CodeQL"
+name: "CodeQL"
 
-#on:
-#  push:
- #   branches: [ "main" ]
-  #pull_request:
-    # The branches below must be a subset of the branches above
-   # branches: [ "main" ]
- # schedule:
-  #  - cron: '21 15 * * 1'
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+   # The branches below must be a subset of the branches above
+    branches: [ "main" ]
+  schedule:
+    - cron: '21 15 * * 1'
 
-#jobs:
- # analyze:
-  #  name: Analyze
-   # runs-on: ubuntu-latest
-    #permissions:
-     # actions: read
-      #contents: read
-      #security-events: write
+jobs:
+  analyze:
+    name: Analyze
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
 
-    #strategy:
-     # fail-fast: false
-     # matrix:
-      #  language: ['java']
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ['java']
          #CodeQL supports [ 'cpp', 'csharp', 'go', 'java', 'javascript', 'python', 'ruby', rust ]
          #Learn more about CodeQL language support at https://aka.ms/codeql-docs/language-support
 
-   # steps:
-    #- name: Checkout repository
-     # uses: actions/checkout@v3
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
     # Initializes the CodeQL tools for scanning.
-    - #name: Initialize CodeQL
-      # uses: github/codeql-action/init@v2
-     # with:
-      #  languages: ${{ matrix.language }}
+    -#name: Initialize CodeQL
+      uses: github/codeql-action/init@v2
+     with:
+       languages: ${{ matrix.language }}
         # If you wish to specify custom queries, you can do so here or in a config file.
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
@@ -54,9 +54,9 @@
 
         
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
-    # If this step fails, then you should remove it and run the build manually (see below)
-    #name: Autobuild
-    #uses: github/codeql-action/autobuild@v2
+     #If this step fails, then you should remove it and run the build manually (see below)
+    name: Autobuild
+    uses: github/codeql-action/autobuild@v2
 
     # ℹ️ Command-line programs to run using the OS shell.
     # 📚 See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
@@ -64,11 +64,11 @@
     #   If the Autobuild fails above, remove it and uncomment the following three lines. 
     #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
 
-    # - run: |
-    #   echo "Run, Build Application using script"
-    #   ./location_of_script_within_repo/buildscript.sh
+     - run: |
+       echo "Run, Build Application using script"
+       ./location_of_script_within_repo/buildscript.sh
 
-    #name: Perform CodeQL Analysis
-     #uses: github/codeql-action/analyze@v2
-      #with:
-       # category: "/language:${{matrix.language}}"
+    name: Perform CodeQL Analysis
+     uses: github/codeql-action/analyze@v2
+      with:
+       category: "/language:${{matrix.language}}"
